tests/theories/success/0005-import-theory-with-module.ec
theory Test.
  module M = {
    proc f() : unit = {}
  }.
end Test.

import Test.

module N = {
  proc g() : unit = {
    M.f();
  }
}.
